### Add directory for gh-pages (HEAD -> refactoring)
>Fri, 26 Feb 2021 10:00:25 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Update .gitignore (origin/refactoring)
>Fri, 26 Feb 2021 07:11:34 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Update docs with gallery, coverage report and tests report
>Fri, 26 Feb 2021 07:10:46 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add tests
>Fri, 26 Feb 2021 07:09:13 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### refactor the code to take into account the different structures of the file formats. Using a plugin approach
>Fri, 26 Feb 2021 07:00:10 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add log configuration in the package during the distribution to avoid warnings
>Fri, 26 Feb 2021 06:57:59 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add dependencies in setup.py
>Thu, 18 Feb 2021 14:14:21 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Change requirements to requirements.txt
>Thu, 18 Feb 2021 13:49:27 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add licence in the header of each python file
>Thu, 18 Feb 2021 06:26:00 +0100
