@@ -1,0 +1,3 @@
+[submodule "docs/site/lisacattools"]
+	path = docs/site/lisacattools
+	url = https://github.com/J-Christophe/lisacattools.git
